--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -8,23 +8,102 @@ description: In this section, you can find the release notes for v7.2 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v7.2.19 (June 30th, 2025; GA)
+
+```
+SHA256 (ipfabric-update-7-2-19+0.tar.zst.sig) = eb6b972a4a8627a33f8e04de802da6f5894b399cd067718233d66e58bdd3c9d8
+MD5 (ipfabric-update-7-2-19+0.tar.zst.sig) = bc1e3fe770a97eeed3520bb932154c02
+SHA256 (ipfabric-7-2-19+0.qcow2) = cf1352dda443b290217d11127a0fa10bdec3d15e523f42797aad4d7e33957902
+MD5 (ipfabric-7-2-19+0.qcow2) = 628751eb732abd3d76d3d581db1285d4
+SHA256 (ipfabric-7-2-19+0.vmdk) = a3bb310c4e4d9ab9722c0482360ea3c106672744699f06241e9f1eedbd0532a3
+MD5 (ipfabric-7-2-19+0.vmdk) = e652d43c0c5f1d681cb45383e072d8f4
+SHA256 (ipfabric-7-2-19+0.vhdx.zst) = ffaa4c54bd8d510be7f42e753395daf02451ca56b110ebc24060ece43ef68844
+MD5 (ipfabric-7-2-19+0.vhdx.zst) = 8d0d2946ba3f4d33d19a1fcf3313dfb9
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-19+0.ova) = 14d8428c548291910811a55e3bd5eefacc817c0b68808a0c45a9c332511225cd
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-19+0.ova) = 7adecee1148b511df0e750ab380cf2e6
+SHA256 (unsupported-ESXi7.0-ipfabric-7-2-19+0.ova) = 26401531cb865a550ea09cbf005dfb08d14a0031d1159e028c22858699ccafb1
+MD5 (unsupported-ESXi7.0-ipfabric-7-2-19+0.ova) = 9bc66408c72d99323e702d359e711b6f
+SHA256 (ESXi8.0-ipfabric-7-2-19+0.ova) = eb843527ae51613f6f6598f08ec35d3bc577fd1c0fe2637a32b886d69392be59
+MD5 (ESXi8.0-ipfabric-7-2-19+0.ova) = 542f40aefa12347f8e5dd9d657199c1e
+```
+
+### Fixes
+
+#### BGP Communities Filtering
+
+Starting with release `7.2.19`, the new BGP communities filtering feature is fully supported on both manual and automated snapshots. Cisco IOS-XR compatibility has also been added.
+
+#### Configuration Management Process Fails to Close SSH Sessions
+
+Since `7.2.19`, the Configuration Management process for HPE `arubasw` devices now properly terminates SSH connections and correctly detects login banners.
+
+### Known Issues
+
+#### License or Database Errors After Upgrade
+
+If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.
+
+!["Failed to load initial app data" error](7.2/7.2_app_data_error.png){.center}
+
+![License error](7.2/7.2_license_error.png){.center}
+
+ **To diagnose the issue:**
+
+1. Log in to the IP Fabric appliance via CLI and switch to the root user using `sudo -i`.
+
+2. Check if ArangoDB is listening on port `8529` via IPv6 (expected for IP Fabric `7.2`):
+
+   ```
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod      952    arangodb   26u  IPv6   19501      0t0  TCP *:8529 (LISTEN)
+   ```
+
+   If ArangoDB is bound to IPv4 instead, this likely causes the error:
+
+   ```
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod     874 arangodb   26u  IPv4  20599      0t0  TCP *:8529 (LISTEN)
+   ```
+
+3. Verify the `arangod.conf` file in `/etc/arangodb3` is a symbolic link to `arangod.conf.ipf`. The directory should show:
+
+   ```
+   root@IPF:~# cd /etc/arangodb3
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf
+   0 lrwxrwxrwx   1 root root    16 Nov 27  2023 arangod.conf -> arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1687 Feb 11 12:07 arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1696 Nov 27  2023 arangod.conf.ipf-orig
+   ```
+
+**If the symlink is missing (i.e., `arangod.conf` is a regular file):**
+
+1. Run these commands to restore the symlink:
+
+   ```
+   cd /etc/arangodb3/
+   mv arangod.conf arangod.conf.bkp
+   ln -s arangod.conf.ipf arangod.conf
+   systemctl restart arangodb3
+   ```
+
+2. Confirm the symlink exists and ArangoDB uses IPv6:
+
+   ```
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf
+   0 lrwxrwxrwx   1 root root    16 May 27 09:30 arangod.conf -> arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1697 May 27 09:22 arangod.conf.bkp
+   4 -rw-r--r--   1 root root  1693 Jan 22  2021 arangod.conf.dpkg-old
+   4 -rw-r--r--   1 root root  1687 Apr 23 13:42 arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1696 Mar  4 10:44 arangod.conf.ipf-orig
+
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod    876 arangodb   26u  IPv6  17979      0t0  TCP *:8529 (LISTEN)
+   ```
+
+After these steps, the GUI should function correctly.
+
 ## v7.2.17 (June 9th, 2025; GA)
-```
-SHA256 (ipfabric-update-7-2-17+0.tar.zst.sig) = 3a3b9c0ecab5603297e35db98fd180d7a35c9e5327be02e68501517ee372354e
-MD5 (ipfabric-update-7-2-17+0.tar.zst.sig) = ddb4f8009f23bae7b1c1be55f921ab9e
-SHA256 (ipfabric-7-2-17+0.qcow2) = 6249b2a155176d55b1d2805256ca975c2884feca4968404be54869a26049bf21
-MD5 (ipfabric-7-2-17+0.qcow2) = 00f4923c04cb735312c41c4a13fc588d
-SHA256 (ipfabric-7-2-17+0.vmdk) = fb0cbb4be5d100660a7af201477b891cb6a4d704f108d085922b6cfe14edac95
-MD5 (ipfabric-7-2-17+0.vmdk) = 6aa0415042cf128f62461ee79261b6ac
-SHA256 (ipfabric-7-2-17+0.vhdx.zst) = f3ea8509b6d7b0b55a5e9d25f936dc6a5822fe761739170ee404809a78ffbd89
-MD5 (ipfabric-7-2-17+0.vhdx.zst) = 4d6b8fa3e47e70aaf36d21e9f680670c
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-17+0.ova) = 842c90a08c62dd4b46902b4d7753bb71f2678d7f4c0f0055b53656fccea3bc14
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-17+0.ova) = 1406790ec4f1cc2f1e694465d91927e9
-SHA256 (unsupported-ESXi7.0-ipfabric-7-2-17+0.ova) = 789b11f70248a9a378a0866de72eb4c2c28c58684b48229b5159fc4c77ba9f6d
-MD5 (unsupported-ESXi7.0-ipfabric-7-2-17+0.ova) = f01491bf442d304105a9c9e13a26f2cd
-SHA256 (ESXi8.0-ipfabric-7-2-17+0.ova) = 25da28f1a6320f5c7a121ce517835407447eac5e15bc103ecb5c3143f2b93e30
-MD5 (ESXi8.0-ipfabric-7-2-17+0.ova) = a90c335120c91b98a77c0e61f7bfa0e5
-```
+
 ### Fixes
 
 #### Something went wrong Error
@@ -32,116 +111,6 @@ MD5 (ESXi8.0-ipfabric-7-2-17+0.ova) = a90c335120c91b98a77c0e61f7bfa0e5
 After an upgrade  a `Something went wrong` error when accessing the IP Fabric GUI after upgrading was shown. This issue was resolved in the `7.2.17` release but may still occur in rare situations. Clear the browser cache to resolve this issue.
 
 !["Something went wrong." error](7.2/7.2_browser_error.png){.center}
-
-### Known Issues
-
-#### License or Database Errors After Upgrade
-
-If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.  
-
-!["Failed to load initial app data" error](7.2/7.2_app_data_error.png){.center}  
-
-![License error](7.2/7.2_license_error.png){.center}  
-
- **To diagnose the issue:**  
-
-1. Log in to the IP Fabric appliance via CLI and switch to the root user using `sudo -i`.  
-
-2. Check if ArangoDB is listening on port `8529` via IPv6 (expected for IP Fabric `7.2`): 
-
-   ```  
-   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
-   arangod      952    arangodb   26u  IPv6   19501      0t0  TCP *:8529 (LISTEN)  
-   ```  
-
-   If ArangoDB is bound to IPv4 instead, this likely causes the error:  
-
-   ```  
-   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
-   arangod     874 arangodb   26u  IPv4  20599      0t0  TCP *:8529 (LISTEN)  
-   ```  
-
-3. Verify the `arangod.conf` file in `/etc/arangodb3` is a symbolic link to `arangod.conf.ipf`. The directory should show:  
-
-   ```  
-   root@IPF:~# cd /etc/arangodb3  
-   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf  
-   0 lrwxrwxrwx   1 root root    16 Nov 27  2023 arangod.conf -> arangod.conf.ipf  
-   4 -rw-r--r--   1 root root  1687 Feb 11 12:07 arangod.conf.ipf  
-   4 -rw-r--r--   1 root root  1696 Nov 27  2023 arangod.conf.ipf-orig  
-   ```  
-
-**If the symlink is missing (i.e., `arangod.conf` is a regular file):**  
-
-1. Run these commands to restore the symlink:  
-
-   ```  
-   cd /etc/arangodb3/  
-   mv arangod.conf arangod.conf.bkp  
-   ln -s arangod.conf.ipf arangod.conf  
-   systemctl restart arangodb3  
-   ```  
-
-2. Confirm the symlink exists and ArangoDB uses IPv6:  
-
-   ```  
-   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf  
-   0 lrwxrwxrwx   1 root root    16 May 27 09:30 arangod.conf -> arangod.conf.ipf  
-   4 -rw-r--r--   1 root root  1697 May 27 09:22 arangod.conf.bkp  
-   4 -rw-r--r--   1 root root  1693 Jan 22  2021 arangod.conf.dpkg-old  
-   4 -rw-r--r--   1 root root  1687 Apr 23 13:42 arangod.conf.ipf  
-   4 -rw-r--r--   1 root root  1696 Mar  4 10:44 arangod.conf.ipf-orig  
-
-   root@IPF:~# lsof -i | grep 8529 | grep LISTEN  
-   arangod    876 arangodb   26u  IPv6  17979      0t0  TCP *:8529 (LISTEN)  
-   ```  
-
-After these steps, the GUI should function correctly.  
-
-#### BGP Communities Filtering Issues
-
-The new BGP communities filtering feature during discovery correctly passes tags to settings **only in automatic snapshots**. However:
-
-1. Manual snapshot triggers fail to activate this feature
-
-2. Even when tags are passed correctly, **filters aren't applied** during Cisco IOS-XR discovery
-
-3. Any modifications to these sections:
-
-   - `Configuration Management`  
-   - `Snapshot Retention`  
-   - `System → SNMP`  
-   - `System → Backup & Maintenance`  
-
-   **remove** the BGP communities filter from `Discovery Settings`  
-
-These issues are scheduled for resolution in an upcoming patch release.
-
-#### Configuration Management Process Fails to Close SSH Sessions
-
-On HPE `arubasw` family devices, the Configuration Management process sometimes fails to terminate SSH connections properly. This occurs when a login banner isn't detected, causing SSH sessions to remain open indefinitely.
-
-To verify if this is happening, access your IP Fabric appliance's command line interface and execute the following when the Configuration Management process is not running:
-
-``` bash
-netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
-```
-
-If you see persistent SSH connections, the output will display multiple active sessions like this:
-
-``` bash
-root@ipfabric:~# netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
-tcp        0      0 10.0.192.108:52784      10.20.94.22:22          ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:22184      10.20.88.20:22          ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:27698      10.20.130.21:22         ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:30666      10.20.94.24:22          ESTABLISHED 624/syslogWorkerBui
-```
-
-To resolve this, restart the Configuration Management service with command:
-
-```
-systemctl restart ipf-discovery-syslogworker.service
-```
 
 ## v7.2.13 (May 21st, 2025; GA)
 
