Adding ipf-sso-setup-helper mention into the RN of 7.3

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -93,6 +93,11 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - Include/Exclude/Whitelist networks
   - Device credentials
 
+#### Automated SSO
+
+- We have developed a new script to simplify the SSO setup process for the IP Fabric application. More details can be found on the
+  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso.md/#automated-sso-enablement-for-the-ipf-application) page.
+
 ### Improvements
 
 #### Technology Tables
