Update LLRN and RN for 7.3 and update upgrade policy

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -13,51 +13,32 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.3.11 (June 12th, 2025; EA)
+## v7.3.13 (June 30th, 2025; EA)
+
 ```
-SHA256 (ipfabric-update-7-3-11+0.tar.zst.sig) = 54e070dbc5f6e234fc31c4ff60cef8b65f377680f2fb798215e411984c16dc1e
-MD5 (ipfabric-update-7-3-11+0.tar.zst.sig) = 381e65722f9116579d51cad92096ff49
-SHA256 (ipfabric-7-3-11+0.qcow2) = bcd9f70e6fe6a77e6e7186fb7b8f6293a1a54a177dc60c622ddbf718842378d4
-MD5 (ipfabric-7-3-11+0.qcow2) = d892a4ae587df76b310ae0e21bb7f966
-SHA256 (ipfabric-7-3-11+0.vmdk) = a9ec4da803c336744a70c693f2da65a849ad6e4254c74660056daac13bd73fcf
-MD5 (ipfabric-7-3-11+0.vmdk) = 1952220e753456ae694a83c4d75027f2
-SHA256 (ipfabric-7-3-11+0.vhdx.zst) = ab3a565052c7b4f489775c36ad1429d60a981b1d38fa74b5ed17450e75cb3518
-MD5 (ipfabric-7-3-11+0.vhdx.zst) = d42bf3b5316fa9ab5481144a028d74ba
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-11+0.ova) = 835d9b72e0b170b948e3d6bf28099519aa38d9717e93fac643eafd02891e2f10
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-11+0.ova) = 95dce75ad50d6215280a736528d14536
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-11+0.ova) = a4c535faa7cc3fc71a105983e9e4230e4885b11e71850663f03398a2b7bf3f66
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-11+0.ova) = a2ebbb5e3825593d982ff3297fa6910a
-SHA256 (ESXi8.0-ipfabric-7-3-11+0.ova) = f34ea13d960aa6fdcbfeb075d1c4ec933004bd0b45281ba09adc7f1a37d9778a
-MD5 (ESXi8.0-ipfabric-7-3-11+0.ova) = d903202c02a38c97f8beb00996f91975
+SHA256 (ipfabric-update-7-3-13+0.tar.zst.sig) = 525c012036ae2255a6e7f3f6401253b1a29a6234f7fff477954a817af12eeb13
+MD5 (ipfabric-update-7-3-13+0.tar.zst.sig) = 6a93fe962a228b85a3e86715d661fc90
+SHA256 (ipfabric-7-3-13+0.qcow2) = 653a4668bbc15556af359446e7b28f682ea65875e4c3336eca5946054d28ec96
+MD5 (ipfabric-7-3-13+0.qcow2) = b9371f4b80eaf413a429dfe4c18bbfb4
+SHA256 (ipfabric-7-3-13+0.vmdk) = 21779edad701d17802b689bb56199a9d3bcd3d1df49a2cf8769251f52f0201d7
+MD5 (ipfabric-7-3-13+0.vmdk) = d83780898778fc093b3598ed16fcbb03
+SHA256 (ipfabric-7-3-13+0.vhdx.zst) = adc2ae01b42637ead4af9e40288b3e544b3e25d88b20f0ac71858a74000cd700
+MD5 (ipfabric-7-3-13+0.vhdx.zst) = 564615468e16f42568bebc879201bcec
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-13+0.ova) = 7f2322c92ce436bdeba1e4284f8f293edc6281dcc646e8f9aee19bd26ef81a37
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-13+0.ova) = 6daf15aea89a3afd8177518d08c73f94
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-13+0.ova) = 20105ffe5153e2160db372278015cdf07a5e5dfc147eb22c48a605542b413eaa
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-13+0.ova) = 182115a843796d8c404b51be9e40b1f8
+SHA256 (ESXi8.0-ipfabric-7-3-13+0.ova) = 20d2bc99e53653b97752a0c3495fda753abbcd1158d618f34e54a34930eb0414
+MD5 (ESXi8.0-ipfabric-7-3-13+0.ova) = 87955ef551e23177978bbf2c2d471d73
 ```
 
-### Known Issues
+### Fixes
 
 #### Configuration Management Process Fails to Close SSH Sessions
 
-On HPE `arubasw` family devices, the Configuration Management process sometimes fails to terminate SSH connections properly. This occurs when a login banner isn't detected, causing SSH sessions to remain open indefinitely.
+Since `7.3.13`, the Configuration Management process for HPE `arubasw` devices now properly terminates SSH connections and correctly detects login banners.
 
-To verify if this is happening, access your IP Fabric appliance's command line interface and execute the following when the Configuration Management process is not running:
-
-``` bash
-netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
-```
-
-If you see persistent SSH connections, the output will display multiple active sessions like this:
-
-``` bash
-root@ipfabric:~# netstat -tnpa | grep 'ESTABLISHED' | grep syslogWorkerBu | grep :22
-tcp        0      0 10.0.192.108:52784      10.20.94.22:22          ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:22184      10.20.88.20:22          ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:27698      10.20.130.21:22         ESTABLISHED 624/syslogWorkerBui
-tcp        0      0 10.0.192.108:30666      10.20.94.24:22          ESTABLISHED 624/syslogWorkerBui
-```
-
-To resolve this, restart the Configuration Management service with command:
-
-```
-systemctl restart ipf-discovery-syslogworker.service
-```
+## v7.3.11 (June 12th, 2025; EA)
 
 #### IP addresses entered in the Settings UI may not be saved in some cases
 
