--- a/docs/releases/release_notes_low-level/7.x/7.0.md
+++ b/docs/releases/release_notes_low-level/7.x/7.0.md
@@ -248,7 +248,7 @@ Task may be associated into Epics or Stories to form complex features.
 
 Epics are high-level features, that may consist of many tasks.
 
-- `NIM-12363` -- Medium -- GCP - Load Balancer Support
+- `NIM-12363` -- Medium -- GCP - Load Balancer Support 7.0
 - `NIM-12818` -- Medium -- AWS Direct Connect
 - `NIM-13156` -- Medium -- Add basic networking support for Velocloud
 - `NIM-13445` -- Medium -- Prepare separate package for frontend components
