--- a/docs/releases/release_notes_low-level/7.x/7.2.md
+++ b/docs/releases/release_notes_low-level/7.x/7.2.md
@@ -6,7 +6,39 @@ search:
 
 # LLRN 7.2
 
-These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 500 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 513 fixed issues.
+
+## 7.2.19
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19007` -- Highest -- PATCH `/settings/credentials/{id}` does not allow for changing username/password
+- `NIM-20110` -- High -- BGP community filtering for ipv6 not following flowchart
+
+## 7.2.18
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19460` -- Highest -- scanWorker Allocation failed - JavaScript heap out of memory
+- `NIM-19489` -- Highest -- Changing Snapshot Attributes does not perform Intent Recalculation
+- `NIM-19490` -- Medium -- IPF is not able to discover endpoints in vNet vn-prod_wvd-use2-01
+- `NIM-19584` -- Highest -- BGP communities not applied on manual snapshots
+- `NIM-19622` -- Highest -- BGP Community filtering doesn't work on IOS-XR
+- `NIM-19863` -- High -- Getting "Cannot detect prompt" error
+- `NIM-19890` -- Highest -- syslogWorker not closing SSH sessions properly after 7.2 upgrade
+- `NIM-19934` -- High -- Upgrade portal stuck after IPF API is running error - allow soft errors
+- `NIM-19942` -- Medium -- GUI error after deleting dashboard
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-19765` -- Medium -- Ensure apache2-utils is removed on machines upgraded to 7.4+
+- `NIM-19801` -- High -- Test BGP community implementation for Juniper and create an MQ ticket for it
 
 ## 7.2.17
 
