--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,59 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 510 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 538 fixed issues.
+
+## 7.3.13
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19007` -- Highest -- PATCH `/settings/credentials/{id}` does not allow for changing username/password
+- `NIM-19952` -- Medium -- Advanced CLI options - Basic failure should allow a value of Zero.
+- `NIM-20110` -- High -- BGP community filtering for ipv6 not following flowchart
+- `NIM-20113` -- Medium -- Authentication failure not able to be set to 0
+
+## 7.3.12
+
+### Epics
+
+Epics are high-level features, that may consist of many tasks.
+
+- `NIM-18970` -- Medium -- Implement manual link - improvements - 7.5
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-18848` -- High -- Technology > Networks tables were removed but Intent Rules were not deleted.
+- `NIM-19138` -- Medium -- Zone firewall table, can't filter for empty from/to zone or match in/out interfaces
+- `NIM-19413` -- Medium -- AWS - Security token expired during discovery
+- `NIM-19460` -- Highest -- scanWorker Allocation failed - JavaScript heap out of memory
+- `NIM-19489` -- Highest -- Changing Snapshot Attributes does not perform Intent Recalculation
+- `NIM-19490` -- Medium -- IPF is not able to discover endpoints in vNet vn-prod_wvd-use2-01
+- `NIM-19584` -- Highest -- BGP communities not applied on manual snapshots
+- `NIM-19622` -- Highest -- BGP Community filtering doesn't work on IOS-XR
+- `NIM-19626` -- High -- Manual Links visualization includes IP address not L1 or L2
+- `NIM-19627` -- Highest -- Jumphost does not allow for IPv6 address
+- `NIM-19684` -- High -- Decrease number of scanWorker logs
+- `NIM-19814` -- High -- IP address list component remains in error state
+- `NIM-19838` -- Medium -- FE - field validation occasionally does not work
+- `NIM-19861` -- Medium -- ABParseError: Couldn't validate AP 6851.34cc.fb77, index: 0, with the error "l2Interfaces[0].speed" must be a number
+- `NIM-19863` -- High -- Getting "Cannot detect prompt" error
+- `NIM-19889` -- Medium -- ABParseError: "vendor" is required
+- `NIM-19890` -- Highest -- syslogWorker not closing SSH sessions properly after 7.2 upgrade
+- `NIM-19924` -- High -- Aruba AOS-10 not properly processed
+- `NIM-19934` -- High -- Upgrade portal stuck after IPF API is running error - allow soft errors
+- `NIM-19942` -- Medium -- GUI error after deleting dashboard
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-19641` -- Medium -- Update doc
+- `NIM-19765` -- Medium -- Ensure apache2-utils is removed on machines upgraded to 7.4+
+- `NIM-19801` -- High -- Test BGP community implementation for Juniper and create an MQ ticket for it
 
 ## 7.3.11
 
