NIM-19770: Document changes to API tables

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -63,6 +63,17 @@ tags: ["draft"]
 - Configuration Management now fully supports IPv6-configured devices with all available functionalities.
 - Added support for Cisco Viptela (Cisco Catalyst SD-WAN) when [API+CLI combined discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md) is configured.
 
+### API Changes
+#### Technology tables
+- The following column operations are no more supported:
+  - Operations (cross-column) on text and text array column: `like`, `notlike`, `reg`, `nreg`, `ireg`, `nireg`
+  - Operations (cross-column) on IP and IPv6 column: `like`, `notlike`, `reg`, `nreg`
+  - Operations (cross-column) on routing and IPv6 routing column: `like`, `notlike`, `reg`, `nreg`
+  - Operations on columns referencing external entities: `ieq`, `nieq`, `like`, `notlike`, `reg`, `ireg`, `nreg`, `nireg`
+- Cross-column operations are now limited by type (e.g. IP column cannot be compared to number column)
+- Regular expressions now use the **POSIX** standard instead of **ECMAScript**: saved filters and intent checks using `reg`, `nreg`, `ireg`, `nireg` operations may be affected
+- Type coercion is no more supported (e.g. string `'123'` will not pass validation if a number is expected)
+
 ### Other Changes
 
 - Removed feature flag `ENABLE_ACI_FVTENANT`
