MQ-7892: Release 7.2.20 for GA

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -8,24 +8,32 @@ description: In this section, you can find the release notes for v7.2 releases.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v7.2.19 (June 30th, 2025; GA)
+## v7.2.20 (July 9th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-2-19+0.tar.zst.sig) = eb6b972a4a8627a33f8e04de802da6f5894b399cd067718233d66e58bdd3c9d8
-MD5 (ipfabric-update-7-2-19+0.tar.zst.sig) = bc1e3fe770a97eeed3520bb932154c02
-SHA256 (ipfabric-7-2-19+0.qcow2) = cf1352dda443b290217d11127a0fa10bdec3d15e523f42797aad4d7e33957902
-MD5 (ipfabric-7-2-19+0.qcow2) = 628751eb732abd3d76d3d581db1285d4
-SHA256 (ipfabric-7-2-19+0.vmdk) = a3bb310c4e4d9ab9722c0482360ea3c106672744699f06241e9f1eedbd0532a3
-MD5 (ipfabric-7-2-19+0.vmdk) = e652d43c0c5f1d681cb45383e072d8f4
-SHA256 (ipfabric-7-2-19+0.vhdx.zst) = ffaa4c54bd8d510be7f42e753395daf02451ca56b110ebc24060ece43ef68844
-MD5 (ipfabric-7-2-19+0.vhdx.zst) = 8d0d2946ba3f4d33d19a1fcf3313dfb9
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-19+0.ova) = 14d8428c548291910811a55e3bd5eefacc817c0b68808a0c45a9c332511225cd
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-19+0.ova) = 7adecee1148b511df0e750ab380cf2e6
-SHA256 (unsupported-ESXi7.0-ipfabric-7-2-19+0.ova) = 26401531cb865a550ea09cbf005dfb08d14a0031d1159e028c22858699ccafb1
-MD5 (unsupported-ESXi7.0-ipfabric-7-2-19+0.ova) = 9bc66408c72d99323e702d359e711b6f
-SHA256 (ESXi8.0-ipfabric-7-2-19+0.ova) = eb843527ae51613f6f6598f08ec35d3bc577fd1c0fe2637a32b886d69392be59
-MD5 (ESXi8.0-ipfabric-7-2-19+0.ova) = 542f40aefa12347f8e5dd9d657199c1e
+SHA256 (ipfabric-update-7-2-20+0.tar.zst.sig) = 0e333e98126b9a34e23cd8ee2ff5db416aee9aac2614d129157f57c97717bc67
+MD5 (ipfabric-update-7-2-20+0.tar.zst.sig) = 67622e100795fee37e584f87feeb1359
+SHA256 (ipfabric-7-2-20+0.qcow2) = 5ac9c60cf289381dcba2bd1b03bea17522b1f122159448cc385ac626cf794a0d
+MD5 (ipfabric-7-2-20+0.qcow2) = bd5314a6f06515dfac2f5ff57b5d8dee
+SHA256 (ipfabric-7-2-20+0.vmdk) = e13861e6a982f39411093d0d3e3795da2ea398bf44cb902f638881b15e3f92e8
+MD5 (ipfabric-7-2-20+0.vmdk) = b400e595c62ed8cbb652c3100678eb3a
+SHA256 (ipfabric-7-2-20+0.vhdx.zst) = 3c8968cf8806993d29434c3d5665e5b769fd1f1d02e11de9d06b8cb25099e97f
+MD5 (ipfabric-7-2-20+0.vhdx.zst) = 7be005a373e337576afecd846761bb3e
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-2-20+0.ova) = 25e9f95389c5f3ca6f5ff18ec804331323650c41f61473a1ce82870528d0bbcd
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-2-20+0.ova) = 7b018c568896450dde8d08b61d790199
+SHA256 (unsupported-ESXi7.0-ipfabric-7-2-20+0.ova) = 829a6a602464d2dfb6d1c7aad74bab39c43ec5f753fc55707cadf0334e5f3e75
+MD5 (unsupported-ESXi7.0-ipfabric-7-2-20+0.ova) = 009d62b348d54f988f34f5393f5979ee
+SHA256 (ESXi8.0-ipfabric-7-2-20+0.ova) = 6d478c4d13495ec38d1d8f10533f34dca0220c475eb9f54bf596699a1c77d1d8
+MD5 (ESXi8.0-ipfabric-7-2-20+0.ova) = e6ab51e846ad0d30f6154d37078457db
 ```
+
+### Fixes
+
+#### Aruba Central AP Discovery
+
+In this release, we reverted the Aruba Central AP discovery logic from version `6.10` due to issues that arose when Central-managed APs functioned as controllers for other APs, rather than operating solely as individual devices.
+
+## v7.2.19 (June 30th, 2025; GA)
 
 ### Fixes
 
