--- a/docs/releases/release_notes_low-level/7.x/7.2.md
+++ b/docs/releases/release_notes_low-level/7.x/7.2.md
@@ -6,7 +6,22 @@ search:
 
 # LLRN 7.2
 
-These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 513 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 516 fixed issues.
+
+## 7.2.20
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19255` -- Highest -- MAC address not being checked/included in path lookup
+- `NIM-19952` -- Medium -- Advanced CLI options - Basic failure should allow a value of Zero.
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20145` -- Highest -- Aruba IAP - Revert logic to 6.9 for Aruba central managed APs
 
 ## 7.2.19
 
