--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -33,6 +33,25 @@ MD5 (ESXi8.0-ipfabric-7-2-20+0.ova) = e6ab51e846ad0d30f6154d37078457db
 
 In this release, we reverted the Aruba Central AP discovery logic from version `6.10` due to issues that arose when Central-managed APs functioned as controllers for other APs, rather than operating solely as individual devices.
 
+### Known Issues
+
+#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
+
+When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
+experience significant delays when handling Fortinet devices. This can result
+in failed discoveries or cause devices to be missing from snapshots.
+
+Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
+`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
+Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
+issue is resolved in one of the upcoming releases.
+
+![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
+
+![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
+
+![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
+
 ## v7.2.19 (June 30th, 2025; GA)
 
 ### Fixes
