MQ-7894: Update checksums and LLRN for 7.3.14 EA

--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,28 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 538 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 547 fixed issues.
+
+## 7.3.14
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20035` -- High -- PaloAlto Discovery issues - XML tags displayed
+- `NIM-20063` -- Medium -- Version fetcher never clears version.json when there's no internet access
+- `NIM-20112` -- Medium -- all.txt and error.txt logs not removed for scanworker
+- `NIM-20206` -- High -- Basic failure not able to be set to 0
+- `NIM-20214` -- High -- Extreme VOSS - running configuration not in CLI Logs due to wrong command
+- `NIM-20222` -- Medium -- Discovery is not able to complete with the VeloCloud API — it has to be stopped manually after 64 hours.
+- `NIM-20281` -- Highest -- Cloud (Meraki) managed catalyst switches not being discovered
+- `NIM-20283` -- Medium -- IPF 7.3.13 - reference to net-shaping-newshape.sh in /etc/network/interfaces causes no DNS resolution
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20145` -- Highest -- Aruba IAP - Revert logic to 6.9 for Aruba central managed APs
 
 ## 7.3.13
 
