Add fortinet known issues, update snippet

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -4,11 +4,6 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 # IP Fabric v7.3
 
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
-
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
@@ -31,6 +26,33 @@ MD5 (unsupported-ESXi7.0-ipfabric-7-3-14+0.ova) = c8cffd0ac04a75441732d82c86d744
 SHA256 (ESXi8.0-ipfabric-7-3-14+0.ova) = bb6899ad499a812ed7f0f6cfd6d0d74ca7f522439570a9cf87ef7c510b42ccae
 MD5 (ESXi8.0-ipfabric-7-3-14+0.ova) = e01a3085b075f6dccf09daa620757dfa
 ```
+
+### Fixes
+
+#### Aruba Central AP Discovery
+
+In this release, we reverted the Aruba Central AP discovery logic from version `6.10` due to issues that arose when Central-managed APs functioned as controllers for other APs, rather than operating solely as individual devices.
+
+### Known Issues
+
+#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
+
+When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
+experience significant delays when handling Fortinet devices. This can result
+in failed discoveries or cause devices to be missing from snapshots.
+
+Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
+`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
+Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
+issue is resolved in one of the upcoming releases.
+
+![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
+
+![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
+
+![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
+
+## v7.3.13 (June 30th, 2025; EA)
 
 ### Fixes
 
