NIM-19973 Add warning about path-based API versioning deprecation

--- a/docs/releases/release_notes/previous_releases/5.0.md
+++ b/docs/releases/release_notes/previous_releases/5.0.md
@@ -82,7 +82,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
     contain `api/v5.0` rather than `api/v1`. If you are scripting against the
     API or using it to integrate into other systems, you must change the URL to
     the new format. For more information on this please visit the [API
-    Documentation](../../../IP_Fabric_API/index.md) page.
+    Documentation](../../../IP_Fabric_API/versioning.md) page.
 
     `ipfabric` and `ipfabric-diagrams` Python SDK's have been updated to
     support the new changes. Please visit
