--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v6.x.x/6.3.md
@@ -52,7 +52,7 @@ MD5 (ipfabric-6-3-1+1.ova) = bacc07182c48474b943924283b01e334
 
 ### Versioned API Error Responses
 
-- All version-related HTTP errors have aligned with [documentation](../../../../IP_Fabric_API/index.md#api-versioning). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
+- All version-related HTTP errors have aligned with [documentation](../../../../IP_Fabric_API/versioning.md). Improperly set version in request will result in an error response with `410 Gone` HTTP code and current product and API versions in its response body. Before it was returning `404 Not Found`.
 
 ### Discovery
 
