--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -87,6 +87,8 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 - Address-type validation ensures that:
   - IPv4 filters apply only to IPv4 addresses
   - IPv6 filters apply only to IPv6 addresses
+- Announcing the deprecation of path-based versioning in the following release.
+  More details can be found on the new [Versioning](../../IP_Fabric_API/versioning.md#url-schema-a-version-in-url) page.
 
 ##### Discovery Configuration Updates
 
