ST-486: Move known issues in release notes

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -8,6 +8,88 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## Known Issues
+
+#### License or Database Errors After Upgrade
+
+If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.
+
+!["Failed to load initial app data" error](7.2/7.2_app_data_error.png){.center}
+
+![License error](7.2/7.2_license_error.png){.center}
+
+ **To diagnose the issue:**
+
+1. Log in to the IP Fabric appliance via CLI and switch to the root user using `sudo -i`.
+
+2. Check if ArangoDB is listening on port `8529` via IPv6 (expected for IP Fabric `7.2`):
+
+   ```
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod      952    arangodb   26u  IPv6   19501      0t0  TCP *:8529 (LISTEN)
+   ```
+
+   If ArangoDB is bound to IPv4 instead, this likely causes the error:
+
+   ```
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod     874 arangodb   26u  IPv4  20599      0t0  TCP *:8529 (LISTEN)
+   ```
+
+3. Verify the `arangod.conf` file in `/etc/arangodb3` is a symbolic link to `arangod.conf.ipf`. The directory should show:
+
+   ```
+   root@IPF:~# cd /etc/arangodb3
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf
+   0 lrwxrwxrwx   1 root root    16 Nov 27  2023 arangod.conf -> arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1687 Feb 11 12:07 arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1696 Nov 27  2023 arangod.conf.ipf-orig
+   ```
+
+**If the symlink is missing (i.e., `arangod.conf` is a regular file):**
+
+1. Run these commands to restore the symlink:
+
+   ```
+   cd /etc/arangodb3/
+   mv arangod.conf arangod.conf.bkp
+   ln -s arangod.conf.ipf arangod.conf
+   systemctl restart arangodb3
+   ```
+
+2. Confirm the symlink exists and ArangoDB uses IPv6:
+
+   ```
+   root@IPF:/etc/arangodb3# ls -lsa | grep arangod.conf
+   0 lrwxrwxrwx   1 root root    16 May 27 09:30 arangod.conf -> arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1697 May 27 09:22 arangod.conf.bkp
+   4 -rw-r--r--   1 root root  1693 Jan 22  2021 arangod.conf.dpkg-old
+   4 -rw-r--r--   1 root root  1687 Apr 23 13:42 arangod.conf.ipf
+   4 -rw-r--r--   1 root root  1696 Mar  4 10:44 arangod.conf.ipf-orig
+
+   root@IPF:~# lsof -i | grep 8529 | grep LISTEN
+   arangod    876 arangodb   26u  IPv6  17979      0t0  TCP *:8529 (LISTEN)
+   ```
+
+After these steps, the GUI should function correctly.
+
+#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
+
+When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
+experience significant delays when handling Fortinet devices. This can result
+in failed discoveries or cause devices to be missing from snapshots.
+
+Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
+`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
+Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
+issue is resolved in one of the upcoming releases.
+
+![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
+
+![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
+
+![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
+
 ## v7.3.14 (July 10th, 2025; EA)
 
 ```
@@ -32,25 +114,6 @@ MD5 (ESXi8.0-ipfabric-7-3-14+0.ova) = e01a3085b075f6dccf09daa620757dfa
 #### Aruba Central AP Discovery
 
 In this release, we reverted the Aruba Central AP discovery logic from version `6.10` due to issues that arose when Central-managed APs functioned as controllers for other APs, rather than operating solely as individual devices.
-
-### Known Issues
-
-#### Fortinet NAT44 and Zone Firewall Tasks Causing Discovery Issues
-
-When NAT44 and Zone Firewall tasks are enabled, discovery processes may hang or
-experience significant delays when handling Fortinet devices. This can result
-in failed discoveries or cause devices to be missing from snapshots.
-
-Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
-`fortigate` **Family** (in **Settings --> Discovery & Snapshots --> Discovery
-Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
-issue is resolved in one of the upcoming releases.
-
-![Disabled Discovery Tasks](./7.2/7.2_disabled_task_list.png)
-
-![Disable Zone firewall discovery task for FortiGate](./7.2/7.2_disabled_task_forti_zonefw.png)
-
-![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
 
 ## v7.3.13 (June 30th, 2025; EA)
 
